--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -8,4 +8,29 @@ html(lang="en")
         include layout/styles
         title Creative One Page Portfolio
     body 
-    .parent
+    //- Start banner
+    section.banner 
+        //- Start navigation
+        nav 
+            ul.links
+                li 
+                    a(href="#") home  
+                li 
+                    a(href="#") about 
+                li 
+                    a(href="#") our serivces  
+                li 
+                    a(href="#") portfolio  
+                li 
+                    a(href="#") experience 
+                li 
+                    a(href="#") blog 
+                li 
+                    a(href="#") contact 
+        .banner-intro 
+            span hello, i am
+            h1
+                span john
+                span smith
+            p I have more then 10 years of Experience
+            a(href="#")  Download CV          
