--- a/src/css/sass/main.scss
+++ b/src/css/sass/main.scss
@@ -1,6 +1,2 @@
-.parent{
-    background-color: #ddd;
-    min-height: 250px;
-    min-width: 250px;
-    box-shadow: 0px 4ps 4ps 1ps #000;
-}
+@import 'layout/global';
+@import 'layout/header';
