--- a/src/css/sass/layout/_header.scss
+++ b/src/css/sass/layout/_header.scss
@@ -45,9 +45,7 @@
                 display: block;
                 font-size: 12rem;
                 letter-spacing: 4px;
-                background: linear-gradient(to right,#a21af0 ,#ff0072);
-                -webkit-text-fill-color: transparent;
-                background-clip: text;
+                @include textGradient;
             }
             span:last-child{
                 display: block;
@@ -64,7 +62,7 @@
         }
         a{
             padding: 10px 20px;
-            background: linear-gradient(to right,#a21af0 ,#ff0072);
+            @extend .linearGradient;
             border: none;
             outline: none;
             margin-top: 70px;
