--- a/src/html/pug/layout/styles.pug
+++ b/src/html/pug/layout/styles.pug
@@ -1,3 +1,5 @@
-link(rel="stylesheet", href="css/main.css")
 link(rel="preconnect", href="https://fonts.gstatic.com")
 link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap")
+link(rel="stylesheet", href="css/font-awesome.css")
+link(rel="stylesheet", href="css/main.css")
+
