--- a/src/css/sass/main.scss
+++ b/src/css/sass/main.scss
@@ -3,3 +3,5 @@
 @import 'layout/global';
 @import 'layout/header';
 @import 'pages/about-us';
+@import 'pages/our-services';
+@import 'pages/testimonials.scss';
