--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -87,3 +87,50 @@ html(lang="en")
                             h5 Email Address
                             p johnsmith@company.com
                             p youoffice@company.com
+    //- Start Our Services
+    section.our-services 
+        .container 
+            .heading 
+                h2 Our services
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            .services 
+                .service 
+                    i.fa.fa-gear 
+                    h4 Best Service
+                    p  Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.   
+                    
+                .service 
+                    i.fa.fa-save
+                    h4 Best Service
+                    p  Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.   
+                .service 
+                    i.fa.fa-tint 
+                    h4 Best Service
+                    p  Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.   
+                .service 
+                    i.fa.fa-american-sign-language-interpreting 
+                    h4 Best Service
+                    p  Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.   
+                    
+                .service 
+                    i.fa.fa-assistive-listening-systems 
+                    h4 Best Service
+                    p  Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.   
+                .service 
+                    i.fa.fa-arrows-alt 
+                    h4 Best Service
+                    p  Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.   
+    //- Testimonials
+    section.testimonials
+        .container
+            .heading 
+                h2 Testimonials
+            .ts-content 
+                .ts-text 
+                    p Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile magnam maores.
+                .ts-client 
+                    .client-img 
+                        img(src="/dist/imgs/ts-client.jpg", alt="")
+                    .client-info 
+                        h4 Jon Brown
+                        span Graphic Designer          
