--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -134,3 +134,37 @@ html(lang="en")
                     .client-info 
                         h4 Jon Brown
                         span Graphic Designer          
+    //- Portfolio
+    section.portfolio 
+        .container 
+            .heading 
+                h2 portfolio 
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            .contents 
+                .links
+                    ul 
+                        li
+                            a.active(href="#") all  
+                        li
+                            a(href="#") PSD Design  
+                        li
+                            a(href="#") Presentation  
+                        li
+                            a(href="#") Work Ideas  
+                        li
+                            a(href="#") Logo  
+                        li
+                            a(href="#") Icons  
+                .content-images
+                    .box 
+                        img(src="/dist/imgs/p1.jpg", alt="") 
+                    .box 
+                        img(src="/dist/imgs/p2.jpg", alt="") 
+                    .box 
+                        img(src="/dist/imgs/p3.jpg", alt="") 
+                    .box 
+                        img(src="/dist/imgs/p4.jpg", alt="") 
+                    .box 
+                        img(src="/dist/imgs/p5.jpg", alt="") 
+                    .box 
+                        img(src="/dist/imgs/p6.jpg", alt="") 
