--- a/src/css/sass/helpers/_mixins.scss
+++ b/src/css/sass/helpers/_mixins.scss
@@ -6,3 +6,16 @@
 .linearGradient{
     background: linear-gradient(to right,#a21af0 ,#ff0072);
 } 
+.heading{
+    text-align: center;
+    h2{
+        font-size: 2.5rem;
+        font-weight: bold;
+        margin-bottom: 15px;
+        text-transform: uppercase;
+    }
+}
+.padding{
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
