--- a/src/css/sass/pages/_our-services.scss
+++ b/src/css/sass/pages/_our-services.scss
@@ -1,18 +1,7 @@
 .our-services{
-    padding-top: 60px;
-    padding-bottom: 60px;
-    text-align: center;
-    .heading{
-        h2{
-            font-size: 2.5rem;
-            font-weight: bold;
-            margin-bottom: 15px;
-            text-transform: uppercase;
-        }
-        p{
-            
-        }
-    }
+    @extend .padding;
+    @extend .heading;
+    
     .services{
         padding-top: 60px;
         display: grid;
