--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -168,3 +168,34 @@ html(lang="en")
                         img(src="/dist/imgs/p5.jpg", alt="") 
                     .box 
                         img(src="/dist/imgs/p6.jpg", alt="") 
+    //- experience
+    section.experiences 
+        .container 
+            .heading    
+                h2 experience
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            .experience 
+                .info 
+                    h4 Personal Adviser
+                    span 2015 - 2016
+                .text 
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt blanditiis debitis consequuntur mollita umenda nam obcaecati illo!
+                        
+            .experience 
+                .info 
+                    h4 Personal Adviser
+                    span 2015 - 2016
+                .text 
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt blanditiis debitis consequuntur mollita umenda nam obcaecati illo!
+            .experience 
+                .info 
+                    h4 Personal Adviser
+                    span 2015 - 2016
+                .text 
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt blanditiis debitis consequuntur mollita umenda nam obcaecati illo!
+            .experience 
+                .info 
+                    h4 Personal Adviser
+                    span 2015 - 2016
+                .text 
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt blanditiis debitis consequuntur mollita umenda nam obcaecati illo!
