--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -199,3 +199,29 @@ html(lang="en")
                     span 2015 - 2016
                 .text 
                     p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt blanditiis debitis consequuntur mollita umenda nam obcaecati illo!
+    //- Blog
+    section.blog 
+        .container 
+            .heading   
+                h2 blog
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            .boxes
+                .box 
+                    figure 
+                        img(src="/dist/imgs/blog1.jpg", alt="")  
+                        figcaption  Personal Adviser
+                    h5 Computer and Using Some Color
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. 
+                .box 
+                    figure 
+                        img(src="/dist/imgs/blog2.jpg", alt="")  
+                        figcaption  Personal Adviser
+                    h5 Computer and Using Some Color
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. 
+                .box 
+                    figure 
+                        img(src="/dist/imgs/blog3.jpg", alt="")  
+                        figcaption  Personal Adviser
+                    h5 Computer and Using Some Color
+                    p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. 
+
