--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -224,4 +224,18 @@ html(lang="en")
                         figcaption  Personal Adviser
                     h5 Computer and Using Some Color
                     p Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. 
+    //- Contact
+    section.contact-us 
+        .container 
+            .contact
+                .heading 
+                    h2 contact 
+                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                form
+                    input(type="text" placeholder="Name")
+                    input(type="number" placeholder="Phone")
+                    input(type="email" placeholder="email")
+                    textarea(name="message", cols="30", rows="10", placeholder="Message")
+                    button(type="submit") send message
 
+            
