--- a/src/css/sass/main.scss
+++ b/src/css/sass/main.scss
@@ -1,3 +1,4 @@
+@import 'helpers/variables';
 @import 'helpers/mixins';
 
 @import 'layout/global';
@@ -8,3 +9,4 @@
 @import 'pages/portfolio';
 @import 'pages/experience';
 @import 'pages/blog';
+@import 'pages/contact-us';
