--- a/src/css/sass/pages/_about-us.scss
+++ b/src/css/sass/pages/_about-us.scss
@@ -75,7 +75,7 @@
                         width: 100px;
                         height: 100px;
                         line-height: 100px;
-                        background-color: #374362;
+                        background-color: $blue;
                         border-radius: 50%;
                         text-align: center;
                         font-size: 2rem;
