--- a/src/html/pug/hompepage.pug
+++ b/src/html/pug/hompepage.pug
@@ -237,5 +237,8 @@ html(lang="en")
                     input(type="email" placeholder="email")
                     textarea(name="message", cols="30", rows="10", placeholder="Message")
                     button(type="submit") send message
+    //-Foter
+    footer 
+        p Copyright 2017 by PSDFreebies.com. All Rights Reserved.
 
             
